--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project-rest-rest",
   "version": "1.0.0",
-  "description": "",
+  "description": "REST-Rant is an app where users can review restaurants.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,6 +13,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-react-views": "^0.11.0",
+    "mongoose": "^7.6.4",
     "react": "^18.2.0"
   }
 }
